# nonk.dev

./: .editorconfig  .gitattributes  .gitignore  CNAME  Cargo.toml  LICENSE  README.md  articles.json  base.css  blog.html  blog.js  index.css  index.html  index.scss  package-lock.json  package.json  render.py  robots.txt  sitemap.xml  style.css
.github/: dependabot.yml
.github/workflows/: deploy.yml  publish.yml  screenies.yml
assets/: logo.avif  status-cafe.css  style.css
blog/: hello.txt  index.html  index.js  index.json  listing.json  on-vim.txt
blog/articles/: 24-07-26.txt  hello.txt
src/: data.rs  main.rs  tab.rs  utils.rs
src/styles/: index.scss
static/: index.css
templates/: _copy-paste.html.j2  article.html.j2  base.html.j2  index.html.j2  sitemap.xml.j2
templates/projects/: index.html.j2
trash/: capture.js
www/: _base.html.j2  _constants.scss  _icons.html.j2  _lib.html.j2  _noai.html.j2  _prelude.scss  _sitemap.xml.j2  _socials.html.j2  index.html.j2  last_updated.lua  nav.json  nav.lua  robots.txt  sitemap.lua
www/about/: index.html.j2
www/assets/: _anim.scss  _layout.scss  _md.scss  _prelude.scss  chattable.css  chattable.scss  logo.avif  status-cafe.js  status-cafe.scss  style.scss
www/assets/css/: _anim.scss  _base.scss  (+4 more)
www/blog/: _article.html.j2  hello.txt  index.json  overhead.txt  render.lua  stallion.txt
www/guestbook/: index.html.j2  style.scss
www/now/: index.html.j2
www/projects/: _index.html.j2  index.html.j2  index.json  render.lua  style.scss
www/shitposts/: _index.html.j2  index.json  render.lua  style.scss
(+11 files in other folders)
